# self-modify

./: Cargo.toml
.cargo/: config
src/: main.rs
