[package]
name = "self-modify"
version = "0.1.0"
authors = ["Laurențiu Nicola <lnicola@dend.ro>"]
edition = "2018"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = "0.0.22"
byteorder = "1.3.1"
